[package]
name = "zo-keeper"
version = "0.1.0"
edition = "2021"

[lib]
name = "zo_keeper"

[dependencies]
zo-abi = { path = "./abi" }
anchor-lang = "0.19.0"
anchor-client = "0.19.0"
solana-client = "1.9"
solana-program = "1.9"
solana-sdk = "1.9"
solana-rpc = "1.9"
solana-account-decoder = "1.9"
solana-transaction-status = "1.9.2"
jsonrpc-core = "18"
jsonrpc-core-client = { version = "18", features = ["ws"] }
dotenv = "0.15"
clap = { version = "3.0.0-rc.8", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
serde = "1"
mongodb = "2"
base64 = "0.13"
regex = "1"
thiserror = "1"
bytemuck = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
az = "1"
num-traits = "0.2"
fixed = "1"
serum_dex = "0.5"
spl-token = "3.2"
