[package]
name = "zo-keeper"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[features]
devnet = ["zo-abi/devnet"]
default = []

[dependencies]
zo-abi = { path = "./abi" }
anchor-lang = "0.24.2"
anchor-client = "0.24.2"
solana-client = "1.9"
solana-program = "1.9"
solana-sdk = "1.9"
solana-rpc = "1.9"
solana-account-decoder = "1.9"
solana-transaction-status = "1.9"
jsonrpc-core = "18"
jsonrpc-core-client = { version = "18", features = ["ws"] }
dotenv = "0.15"
clap = { version = "3.0.0-rc.8", default-features = false, features = ["std", "derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
mongodb = "2"
base64 = "0.13"
thiserror = "1"
bytemuck = "1"
chrono = "0.4"
az = "1"
num-traits = "0.2"
fixed = "1"
serum_dex = "0.5"
spl-token = "3.2"
